--- a/projects.html
+++ b/projects.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Giann Chan</title>
+    <title>Giann Chan | Projects</title>
   </head>
   <body>
     <header>
-      <h1>Home</h1>
+      <h1>Projects</h1>
       <h2>h2 subtitle</h2>
     <nav>
       <ul>
@@ -18,15 +18,15 @@
     </nav>
   </header>
   <main>
-    <h2>another h2</h2>
-  </main>
-      <footer>
-          last update date, contact information, or links to social media
-          <ul>
-              <li><a href = "https://www.linkedin.com/in/giann-chan">LinkedIn</a></li>
-              <li><a href = "#">2</a></li>
-              <li><a href = "#">3</a></li>
-            </ul> 
-      </footer>
-    </body>
-  </html>
+  <h2>another h2</h2>
+</main>
+    <footer>
+        last update date, contact information, or links to social media
+        <ul>
+            <li><a href = "https://www.linkedin.com/in/giann-chan">LinkedIn</a></li>
+            <li><a href = "#">2</a></li>
+            <li><a href = "#">3</a></li>
+          </ul> 
+    </footer>
+  </body>
+</html>
