--- a/about.html
+++ b/about.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Giann Chan</title>
+    <title>Giann Chan | About</title>
   </head>
   <body>
     <header>
-      <h1>Home</h1>
+      <h1>About</h1>
       <h2>h2 subtitle</h2>
     <nav>
       <ul>
